--- a/cloudcannon.config.yml
+++ b/cloudcannon.config.yml
@@ -268,5 +268,9 @@ _inputs:
     type: image
     label: hope image 1
     cascade: true
+  hope-image-2:
+    type: image
+    label: hope image 2
+    cascade: true
 data_config: {}
 timezone: Etc/UTC
