Updated 1 file via CloudCannon.

--- a/cloudcannon.config.yml
+++ b/cloudcannon.config.yml
@@ -280,5 +280,9 @@ _inputs:
     type: image
     label: image 1
     cascade: true
+  image-2:
+    type: image
+    label: image 2
+    cascade: true
 data_config: {}
 timezone: Etc/UTC
